History of this buildout
========================

4.16 (unreleased)
-----------------

- Nothing changed yet.


4.15 (2012-06-13)
-----------------

- Added patch so recaptcha uses proxies. [vincent]


4.14 (2012-05-07)
-----------------

- Add a link with the text 'Archive' to the digibib overview.
  [maurits]

- Switch 'folder' and 'plus' icons around in the digibib overview.
  [maurits]

- Changed label of folder icon in Digibib overview to 'Archive'.
  [maurits]


4.13 (2012-04-24)
-----------------

- Fixed order of items displaying in 'jaarverslag' view.
  [vincent]


4.12 (2012-04-16)
-----------------

- Get rid of ugly underscore after the mail document action.
  [maurits]


4.11 (2012-03-22)
-----------------

- Added upgrade step to get the new action.
  [maurits]

- Fixed typo in Dutch translation.
  [maurits]


4.10 (2012-03-21)
-----------------

- Added action on meeting to manually regenerate the full
  PDF. [vincent] 

- Updated listeners for the 'conacatenate_pdf' event. [vincent]


4.9 (2012-02-22)
----------------

- Added DataGridField 'otherInvitees' to meeting.
  [maurits]

- Add Products.DataGridField.
  [maurits]


4.8 (2012-02-14)
----------------

- Do not update the invitees for meetings in the 'past' state.
  [maurits]

- When saving a meeting that is still in the initial (new) state,
  reset the list of invitees before rebuilding it.  This way we can
  correct mistakes for new meetings.
  [maurits]

- Use collective.emaillogin = 1.2.
  [maurits]

- pwreset_action: use userid as login name and make it lower case.
  [maurits]

- Make the in_factory field of agenda item invisible.  It is not meant
  for end users.
  [maurits]


4.7 (2012-02-07)
----------------

- Added missing Dutch translation.
  [maurits]


4.6 (2012-02-02)
----------------

- Merged 3.45 changes.
  [maurits]


4.5 (2012-01-23)
----------------

- Let varnish simply listen on all IP addresses.
  [maurits]


4.4 (2012-01-23)
----------------
