@@ -32,6 +32,10 @@ versions = versions
 
 [env]
 recipe = gocept.recipe.env
+# The recipe reads environment variables. This next empty value is
+# only used when the environment variable does not exist, so that
+# buildout does not give an error when it wants to use the variable.
+HTTP_PROXY =
 
 [conf]
 # Ports
@@ -121,6 +125,7 @@ zserver-threads = 3
 environment-vars =
     PTS_LANGUAGES nl
     MINARAAD_LOG_PATH ${conf:minaraad-log-path}
+    HTTP_PROXY ${env:HTTP_PROXY}
 
 eggs =
     ${buildout:eggs}
